--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tiptap/extension-color": "^2.23.0",
+    "@tiptap/extension-image": "^2.23.0",
+    "@tiptap/extension-link": "^2.23.0",
+    "@tiptap/extension-text-style": "^2.23.0",
+    "@tiptap/react": "^2.23.0",
+    "@tiptap/starter-kit": "^2.23.0",
     "axios": "^1.10.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "quill": "^2.0.3",
+    "quill-delta-to-html": "^0.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
+    "react-quilljs": "^2.0.5",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
