--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tiptap/extension-code-block-lowlight": "^3.0.7",
     "@tiptap/extension-color": "^2.23.0",
     "@tiptap/extension-image": "^2.23.0",
     "@tiptap/extension-link": "^2.23.0",
@@ -16,7 +17,9 @@
     "@tiptap/react": "^2.23.0",
     "@tiptap/starter-kit": "^2.23.0",
     "axios": "^1.10.0",
+    "dompurify": "^3.2.6",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "lowlight": "^3.3.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "quill": "^2.0.3",
@@ -31,6 +34,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/dompurify": "^3.2.0",
     "@types/node": "^20",
     "@types/quill": "^2.0.14",
     "@types/react": "^19",
