--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.10.0",
     "dompurify": "^3.2.6",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "lodash": "^4.17.21",
     "lowlight": "^3.3.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
@@ -35,6 +36,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/dompurify": "^3.2.0",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/quill": "^2.0.14",
     "@types/react": "^19",
