--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,38 +7,38 @@ on:
     branches: [ main, develop, deploy/main ]
 
 jobs:
-  lint-and-typecheck:
-    name: Lint & Type Check
-    runs-on: ubuntu-latest
+  # lint-and-typecheck:
+  #   name: Lint & Type Check
+  #   runs-on: ubuntu-latest
     
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
         
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
+  #     - name: Install pnpm
+  #       uses: pnpm/action-setup@v2
+  #       with:
+  #         version: 8
         
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'pnpm'
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '20'
+  #         cache: 'pnpm'
           
-      - name: Install dependencies
-        run: pnpm install
+  #     - name: Install dependencies
+  #       run: pnpm install
         
-      - name: Lint
-        run: pnpm run lint
+  #     - name: Lint
+  #       run: pnpm run lint
         
-      - name: Type check
-        run: pnpm exec tsc --noEmit
+  #     - name: Type check
+  #       run: pnpm exec tsc --noEmit
 
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [lint-and-typecheck]
+    # needs: [lint-and-typecheck]
     
     steps:
       - name: Checkout code
