Update environment variables for backend API configuration

--- a/env.example
+++ b/env.example
@@ -2,11 +2,11 @@
 # Copy this file to .env.local and fill in your actual values
 
 # Backend API Configuration
-NEXT_PUBLIC_BACKEND_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_BACKEND_BASE_URL=https://lms-stg-backend.nirudhyog.com
 
 # NextAuth Configuration
 NEXTAUTH_SECRET=your-nextauth-secret-key-here-make-it-long-and-random
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://lms-stg-backend.nirudhyog.com
 
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
