--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "lodash": "^4.17.21",
     "lowlight": "^3.3.0",
+    "lucide-react": "^0.533.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "quill": "^2.0.3",
