--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,38 +7,38 @@ on:
     branches: [ main, develop, deploy/main ]
 
 jobs:
-  # lint-and-typecheck:
-  #   name: Lint & Type Check
-  #   runs-on: ubuntu-latest
+  lint-and-typecheck:
+    name: Lint & Type Check
+    runs-on: ubuntu-latest
     
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
         
-  #     - name: Install pnpm
-  #       uses: pnpm/action-setup@v2
-  #       with:
-  #         version: 8
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
         
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: '20'
-  #         cache: 'pnpm'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'pnpm'
           
-  #     - name: Install dependencies
-  #       run: pnpm install
+      - name: Install dependencies
+        run: pnpm install
         
-  #     - name: Lint
-  #       run: pnpm run lint
+      - name: Lint
+        run: pnpm run lint
         
-  #     - name: Type check
-  #       run: pnpm exec tsc --noEmit
+      - name: Type check
+        run: pnpm exec tsc --noEmit
 
   build:
     name: Build
     runs-on: ubuntu-latest
-    # needs: [lint-and-typecheck]
+    needs: [lint-and-typecheck]
     
     steps:
       - name: Checkout code
@@ -113,52 +113,4 @@ jobs:
         run: pnpm audit --audit-level moderate
         continue-on-error: true
         
-  accessibility-check:
-    name: Accessibility Check
-    runs-on: ubuntu-latest
-    needs: [build]
-    if: github.event_name == 'pull_request'
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-        
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'pnpm'
-          
-      - name: Install dependencies
-        run: pnpm install
-        
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifacts
-          
-      - name: Install axe-core
-        run: npm install -g @axe-core/cli
-        
-      - name: Start Next.js server
-        run: |
-          pnpm start &
-          sleep 10
-        env:
-          NODE_ENV: production
-          # Mock environment variables for CI
-          NEXTAUTH_SECRET: mock-nextauth-secret-for-ci-only
-          NEXTAUTH_URL: http://localhost:3000
-          GOOGLE_CLIENT_ID: mock-client-id.apps.googleusercontent.com
-          GOOGLE_CLIENT_SECRET: mock-client-secret
-          NEXT_PUBLIC_BACKEND_BASE_URL: http://localhost:3000
-          
-      - name: Run accessibility tests
-        run: |
-          npx axe http://localhost:3000 --exit
-        continue-on-error: true 
+ 
