--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-quilljs": "^2.0.5",
+    "recharts": "^3.1.0",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
