--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.533.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
+    "prettier": "^3.6.2",
     "quill": "^2.0.3",
     "quill-delta-to-html": "^0.12.1",
     "react": "^19.0.0",
