--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "quill-delta-to-html": "^0.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-quilljs": "^2.0.5",
